--- a/app/src/main/res/layout/meals_recycler_item.xml
+++ b/app/src/main/res/layout/meals_recycler_item.xml
@@ -20,7 +20,7 @@
             android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/detail_image_iv"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -34,12 +34,12 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/detail_image_iv"
             app:layout_constraintTop_toBottomOf="@+id/meal_title_tv"
             app:layout_constraintVertical_bias="0.636" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/detail_image_iv"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
