--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_nav">
+    android:id="@+id/main_nav"
+    app:startDestination="@id/homeFragment">
 
+    <fragment
+        android:id="@+id/detailScreen"
+        android:name="com.example.chefgram.ui.detail.DetailScreen"
+        android:label="DetailScreen" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.chefgram.ui.home.HomeFragment"
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_detailScreen"
+            app:destination="@id/detailScreen" />
+    </fragment>
 </navigation>
