--- a/app/src/main/res/layout/fragment_create_recipe_screen.xml
+++ b/app/src/main/res/layout/fragment_create_recipe_screen.xml
@@ -8,6 +8,7 @@
 
     <EditText
         android:layout_width="0dp"
+        android:id="@+id/title_formulary_tv"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:layout_constraintEnd_toEndOf="parent"
