--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,6 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:showAsAction="always"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/baseline_home_24"
         android:title="Home" />
     <item
@@ -17,6 +18,7 @@
     <item
         android:layout_width="wrap_content"
         app:showAsAction="always"
+        android:id="@+id/favoriteScreen"
         android:layout_height="wrap_content"
         android:icon="@drawable/baseline_favorite_24"
         android:title="Favorites" />
