--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,14 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+    
+    <style name="FloatingButtonCircularOverlay" parent="Widget.Design.FloatingActionButton">
+        <item name="shapeAppearanceOverlay">@style/FabCircularShape</item>
+    </style>
+
+    <style name="FabCircularShape" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerSize">50dp</item>
+    </style>
+
+
 </resources>
