Navigation fix,icons,preferences,swipe,clear cache

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -8,7 +8,17 @@
     <fragment
         android:id="@+id/detailScreen"
         android:name="com.example.chefgram.ui.detail.DetailScreen"
-        android:label="DetailScreen" />
+        android:label="DetailScreen" >
+        <action
+            android:id="@+id/action_detailScreen_to_favoriteScreen"
+            app:destination="@id/favoriteScreen" />
+        <action
+            android:id="@+id/action_detailScreen_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_detailScreen_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.chefgram.ui.home.HomeFragmentScreen"
@@ -19,6 +29,9 @@
         <action
             android:id="@+id/action_homeFragment_to_favoriteScreen"
             app:destination="@id/favoriteScreen" />
+        <action
+            android:id="@+id/action_homeFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/favoriteScreen"
@@ -27,6 +40,26 @@
         tools:layout="@layout/fragment_favorite_screen" >
         <action
             android:id="@+id/action_favoriteScreen_to_detailScreen"
+            app:destination="@id/detailScreen" />
+        <action
+            android:id="@+id/action_favoriteScreen_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_favoriteScreen_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.chefgram.ui.preferences.SettingsFragment"
+        android:label="SettingsFragment" >
+        <action
+            android:id="@+id/action_settingsFragment_to_favoriteScreen"
+            app:destination="@id/favoriteScreen" />
+        <action
+            android:id="@+id/action_settingsFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_settingsFragment_to_detailScreen"
             app:destination="@id/detailScreen" />
     </fragment>
 </navigation>
