--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <item
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:showAsAction="always"
         android:id="@+id/homeFragment"
-        android:icon="@drawable/baseline_home_24"
-        android:title="Home" />
-    <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title=""
-        android:enabled="false"/>
+        android:icon="@drawable/baseline_home_24"
+        android:title="Home"
+        app:showAsAction="always" />
     <item
-        android:layout_width="wrap_content"
-        app:showAsAction="always"
         android:id="@+id/favoriteScreen"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/baseline_favorite_24"
-        android:title="Favorites" />
+        android:title="Favorites"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/settingsFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@drawable/settings_icon"
+        android:title="Settings"
+        app:showAsAction="ifRoom" />
+
 </menu>
