--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,36 +14,35 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            app:liftOnScroll="true"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:liftOnScroll="true">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:layout_width="match_parent"
                 android:id="@+id/toolbar"
-                app:navigationIconTint="?attr/colorOnBackground"
-                app:navigationIcon="@drawable/baseline_arrow_back_24"
+                android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways"
-                app:titleCentered="true"
-                >
+                app:navigationIcon="@drawable/baseline_arrow_back_24"
+                app:navigationIconTint="?attr/colorOnBackground"
+                app:titleCentered="false">
 
                 <ImageView
+                    android:id="@+id/app_bar_title_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="12dp"
-                    app:tint="?attr/colorOnBackground"
                     android:layout_gravity="center"
+                    android:contentDescription="@string/logo_title_of_the_app_image_description"
+                    android:padding="12dp"
                     android:src="@drawable/app_title_logo"
-                    android:contentDescription="@string/logo_title_of_the_app_image_description" />
+                    app:tint="?attr/colorOnBackground" />
 
                 <androidx.appcompat.widget.SearchView
                     android:id="@+id/search_bar"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:iconifiedByDefault="true"
                     android:layout_gravity="end"
                     android:layout_margin="4dp"
-                    />
+                    app:iconifiedByDefault="true" />
 
             </com.google.android.material.appbar.MaterialToolbar>
 
